revise to reflect course size

--- a/HB/HB 3111-Genesis-Driver 2017.tex
+++ b/HB/HB 3111-Genesis-Driver 2017.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[2.1.1]{HB 3111}
+\coursecode[2.1.2]{HB 3111}
 \coursetitle[Hebrew Bible]{The Book of Genesis}
 
 % Taught as RLGS 3213 (T&I: Genesis) in:
@@ -29,8 +29,8 @@
 \semester{Winter Term 2017}
 \meets{Fridays}% \meets{on}{at}{in}
       {9:00--11:30 \AM}
-      {One (1)}
-\website{astheology.ns.ca}
+      {Memorial Room, St. Paul’s}
+\website{danieldriver.com/courses/}
 \cdescription{% copy from the current Academic Calendar
 	In the modern period an enormous amount has been written about the
 	genesis of Genesis, the history \emph{behind} the first book of the
@@ -224,7 +224,7 @@ the needs of the class.
 
 		& Genesis 49     &          &       &      &  6 Jan. \\
 		& Genesis 9      & Intro--1 &       & 1--3 & 13 Jan. \\
-		& Genesis 1      & 2--3     &       & 4    & 20 Jan. \\
+		& Genesis 1      & 2--3     &       & 4    & 19 Jan. \\
 		& Genesis 2      & 4--5     &       & 5    & 27 Jan. \\
 		& Genesis 3      & 6--7     &       & 6    &  3 Feb. \\
 		& Genesis 4--5   & 8--End   &       & 7    & 10 Feb. \\
@@ -263,32 +263,32 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	have read the assigned material carefully. Points may be deducted if
 	it becomes evident that the reading has not been taken seriously.
 
-	\item Students must lead \textbf{two 30-minute seminars} on single
-	chapters from the Book of Genesis. They should take the lead by
-	briefly outlining the chapter in question, situating it relative to
-	the rest of Genesis, and reporting on their research into at least
-	seven different commentaries. Then, in the balance of the time, they
-	should helping the class elaborate, reflect on, test, challenge, or
-	extend a central idea or two. Students are encouraged to align their
-	seminar preparations with their choice of texts for their exegetical
-	papers.
+	\item Every other week, students will lead \textbf{seminars} on
+	single chapters from the Book of Genesis. They should take the lead
+	by briefly outlining the chapter in question, situating it relative
+	to the rest of Genesis, and reporting on their research into part of
+	that chapter. Then, in the balance of the time, they should helping
+	the class elaborate, reflect on, test, challenge, or extend a
+	central idea or two. Students are encouraged to align their seminar
+	preparations with their choice of texts for their exegetical paper.
 
-	\item Two \textbf{exegetical papers} will facilitate extended
-	exercises in biblical interpretation. Each should focus on a short
-	passage from Genesis and should be 3--4,000 words long. They are due
-	at the start of classes seven and twelve, respectively.
+	\item A major \textbf{exegetical paper} will facilitate an extended
+	exercise in biblical interpretation. It should focus on a short
+	passage from Genesis, should interact with the secondary readings
+	and further research into the passage in question, and should be
+	3--4,000 words long. It is due at the start of the last class.
 
-	\begin{enumerate}
-
-		\item The \textbf{first paper} will focus on a passage from
-		Genesis 1--11 and should interact carefully with
-		\cite{anderson}, among others.
-
-		\item The \textbf{second paper} will focus on a passage from
-		Genesis 12--50 and should interact carefully with
-		\cite{levenson}, among others.
-
-	\end{enumerate}
+%	\begin{enumerate}
+%
+%		\item The \textbf{first paper} will focus on a passage from
+%		Genesis 1--11 and should interact carefully with
+%		\cite{anderson}, among others.
+%
+%		\item The \textbf{second paper} will focus on a passage from
+%		Genesis 12--50 and should interact carefully with
+%		\cite{levenson}, among others.
+%
+%	\end{enumerate}
 
 \end{enumerate}
 
@@ -300,11 +300,9 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Prompts & 20\% \\
-    First Seminar   & 15\% \\
-    Second Seminar  & 15\% \\
-    First Paper     & 25\% \\
-    Second Paper    & 25\% \\
+    Reading Prompts  & 30\% \\
+    Student Seminars & 30\% \\
+    Exegetical Paper & 40\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
