update schedule, bump to v 2.1.4

--- a/HB/HB 3111-Genesis-Driver 2017.tex
+++ b/HB/HB 3111-Genesis-Driver 2017.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[2.1.3]{HB 3111}
+\coursecode[2.1.4]{HB 3111}
 \coursetitle[Hebrew Bible]{The Book of Genesis}
 
 % Taught as RLGS 3213 (T&I: Genesis) in:
@@ -214,33 +214,30 @@ We will adhere to the schedule in \autoref{schedule} as closely as
 possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
 
-\setcolumncount{6}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\setcolumncount{7}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
 \begin{table}[htbp]% set to `p' to put the schedule on its own page
   \centering
-  \begin{tabular}{>{\sessioncount.}r@{ }lcccr}% make sure the column config agrees with \setcolumncount
+  \begin{tabular}{>{\sessioncount.}r@{ }lccccr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary}&\textbf{Anderson}&\textbf{Levenson}&\textbf{Provan}&\textbf{Date}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary}&\textbf{Anderson}&\textbf{Levenson}&\textbf{Provan}&\textbf{Seminar}&\textbf{Date}\\
 	\midrule
 
-		& Genesis 49     &          &       &      &  6 Jan. \\
-		& Genesis 9      & Intro--1 &       & 1--3 & 13 Jan. \\
-		& Genesis 1      & 2--3     &       & 4    & 19 Jan. \\
-		& Genesis 2      & 4--5     &       & 5    & 27 Jan. \\
-		& Genesis 3      & 6--7     &       & 6    &  3 Feb. \\
-		& Genesis 4--5   & 8--End   &       & 7    & 10 Feb. \\
+		& Genesis 49     &          &       &      &    &  6 Jan. \\
+		& Genesis 9      & Intro--1 &       & 1--3 & DD & 13 Jan. \\
+		& Genesis 1      & 2--3     &       & 4    & MT & 19 Jan. \\
+		& Genesis 2      & 4--5     &       & 5    & AM & 27 Jan. \\
+		& Genesis 3      & 6--7     &       & 6    & MT &  3 Feb. \\
+		& Genesis 4--5   & 8--End   &       & 7    & AM & 10 Feb. \\
+		& Genesis 6--11  &          & Intro & 8    & MT & 17 Feb. \\
+	\noclass{Term Break (Monday to Friday)}             & 24 Feb. \\
+		& Genesis 12--15 &          & 1--2  &      & AM &  3 Mar. \\
+		& Genesis 16--25 &          & 3--4  & 9    & MT & 10 Mar. \\
+		& Genesis 26--36 &          & 5     & 10   & AM & 17 Mar. \\
+		& Genesis 37--45 &          & 6     & 11   & MT & 24 Mar. \\
 
-	\reminder{First paper is \textbf{due} at the start of class seven}{} \\
+	\reminder{Exegetical paper is \textbf{due} at the start of class twelve}{} \\
 
-		& Genesis 6--11  &          & Intro & 8    & 17 Feb. \\
-	\noclass{Term Break (Monday to Friday)}        & 24 Feb. \\
-		& Genesis 12--15 &          & 1--2  &      &  3 Mar. \\
-		& Genesis 16--25 &          & 3--4  & 9    & 10 Mar. \\
-		& Genesis 26--36 &          & 5     & 10   & 17 Mar. \\
-		& Genesis 37--45 &          & 6     & 11   & 24 Mar. \\
-
-	\reminder{Second paper is \textbf{due} at the start of class twelve}{} \\
-
-		& Genesis 46--50 &          &       &      & 31 Mar. \\
+		& Genesis 46--50 &          &       &      & AM & 31 Mar. \\
 
 	\reminder{End of Term: Final marks are due for all courses}{12 Apr.} \\
 
