specify which assignment is due

--- a/HB/HBST 3001-Doctrine and the OT.tex
+++ b/HB/HBST 3001-Doctrine and the OT.tex
@@ -186,7 +186,7 @@ the needs of the class.
 		& Mariology           & 7    &      & 1 Sam 1--2     & 25 July \\
 		& Faith \& Works      & 8--9 & 10   & Tobit 1--4     & 26 July \\
 		& Atonement           & 10   & 11   & Tobit 12--14   & 27 July \\
-	\reminder{Assignment is \textbf{due} at the start of class ten}{}  \\
+	\reminder{Paper is \textbf{due} at the start of class ten}{}  \\
 		& Accordance          &      &      & 2 Kings 17     & 28 July \\
 	\reminder{End of Term: Final marks are due to the Registrar}{7 Aug.} \\
 
