revise and update HBST 3001 to v 1.1.0

--- a/HB/HBST 3001-Doctrine and the OT.tex
+++ b/HB/HBST 3001-Doctrine and the OT.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[1.0.0]{HB/ST 3001}
+\coursecode[1.1.0]{HB/ST 3001}
 \coursetitle[Hebrew Bible/Systematic Theology]{Christian Doctrine and\\[.8ex] the Old Testament}
 
 % Taught as RLGS 4483 (a remote antecedent) at Tyndale UC in:
@@ -27,7 +27,7 @@
 \semester{Summer Term 2017}
 \meets{Mon–Fri, July 17–28}% \meets{on}{at}{in}
       {9:00--12:00 \AM}
-      {TBA}
+      {Classroom 2}
 \website{danieldriver.com/courses/}
 \cdescription{% copy from the current Academic Calendar
 	What is the relationship of scripture and theology? Some answers to
@@ -81,9 +81,9 @@
 \section{Required Texts \& Materials}
 \label{texts}
 
-The following texts are required. Students are strongly encouraged to
-purchase their own copies. Library copies that are not reference works
-will be placed on a 2-hour reserve.
+The following texts are required. Students are encouraged to purchase
+their own copies. Library copies that are not already reference works
+will be placed on a 1-hour reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -92,17 +92,18 @@ will be placed on a 2-hour reserve.
 	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
     \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 4th ed.
     Oxford / New York: Oxford University Press, 2010.
-    \textsc{isbn} 978-0195289602.
+%    \textsc{isbn} 978-0195289602.
 
 	\bibitem[Anderson]{anderson} Gary A. Anderson.
 	\emph{Christian Doctrine and the Old Testament: Theology in the Service of Biblical Exegesis}.
 	Grand Rapids: Baker Academic, 2017.
-	\textsc{isbn} 978-0801098253.
+%	\textsc{isbn} 978-0801098253.
 
 	\bibitem[MacDonald]{macdonald} Neil B. MacDonald.
 	\emph{Metaphysics and the God of Israel: Systematic Theology of the Old and New Testaments}.
 	Grand Rapids: Baker Academic, 2006.
-	\textsc{isbn} 978-0801032431.
+%	\textsc{isbn} 978-0801032431.
+	For those who are unable to find copies of this book for resale, the library's reserve copy should suffice to meet the needs of the class.
 
 %	\bibitem[tk]{tk} tk.
 %	\emph{tk}.
@@ -123,7 +124,7 @@ available in the library, and it is well worth consulting.
 Supplementary readings will be recommended throughout the course. In
 particular, students are asked to explore relevant church statements
 about Christian scripture, particularly the Old Testament. Resources
-from the founding churches of AST include:
+from the founding churches of AST include the following.
 
 \begin{enumerate}
 
@@ -136,7 +137,7 @@ from the founding churches of AST include:
 	\item PBC: \emph{Le peuple juif et ses Saintes Écritures dans la Bible chrétienne}, \href{http://www.vatican.va/roman_curia/congregations/cfaith/pcb_documents/rc_con_cfaith_doc_20020212_popolo-ebraico_en.html}{The Jewish People and Their Sacred Scriptures in the Christian Bible} (May 24, 2001)
 	\end{enumerate}
 
-\item ACC: Anglican Church of Canada
+\item ACC: Anglican Church of Canada (one of 38 Provinces in the Anglican Communion)
 
 	\begin{enumerate}
 	\item Articles VI–VII of \href{https://www.churchofengland.org/prayer-worship/worship/book-of-common-prayer/articles-of-religion.aspx}{The Thirty-nine Articles of Religion} (1562)
@@ -148,11 +149,18 @@ from the founding churches of AST include:
 \item UCC: United Church of Canada
 
 	\begin{enumerate}
-	\item \href{https://ecumenism.net/archive/docu/1992_ucc_authority_interpretation_scripture.pdf}{\emph{The Authority and Interpretation of Scripture: A Statement of the United Church of Canada}} (Toronto: United Church Publishing House, 1992) [BS 480 U65 1992]
-	\item R.\,C. Fennell, Series on “How Does the United Church Interpret the Bible?” in \href{http://touchstonecanada.ca}{\emph{Touchstone}}, a Canadian journal of theology and heritage:
+	\item The UCC requires its ministers to be in ``\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/what-we-believe}{essential agreement}'' with four doctrinal statements that are ``\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/faith-statements}{subordinate to the primacy of scripture}'':
 		\begin{enumerate}
-			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/Article2_2008-051.pdf}{Part I 1904–1940s: Tradition and Resistance} (26.2 [2008]: 13--24)
-			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/3rdArticle_2008-09.pdf}{Part II 1950s–1990s: Tradition and Liberation} (26.3 [2008]: 31--42)
+			\item\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/twenty-articles-doctrine-1925}{Twenty Articles of Doctrine} (1925)
+			\item\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/statement-faith-1940}{A Statement of Faith} (1940)
+			\item\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/new-creed}{A New Creed} (1968)
+			\item\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/song-faith}{A Song of Faith} (2006)
+		\end{enumerate}
+	\item \href{https://ecumenism.net/archive/docu/1992_ucc_authority_interpretation_scripture.pdf}{\emph{The Authority and Interpretation of Scripture: A Statement of the United Church of Canada}} (Toronto: UC Publishing House, 1992) [BS 480 U65 1992 -- \textbf{on reserve}]
+	\item See also R.\,C. Fennell's series “How Does the United Church Interpret the Bible?” in \href{http://touchstonecanada.ca}{\emph{Touchstone}}, a Canadian journal of theology and heritage:
+		\begin{enumerate}
+			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/Article2_2008-051.pdf}{Part I, 1904–1940s: Tradition and Resistance} (26.2 [2008]: 13--24)
+			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/3rdArticle_2008-09.pdf}{Part II, 1950s–1990s: Tradition and Liberation} (26.3 [2008]: 31--42)
 			\item\href{http://touchstonecanada.ca/wp-content/uploads/2013/08/Touchstone_May_2011.pdf}{Part III: A Song of Faith} (29.2 [2011]: 21--29)
 		\end{enumerate}
 	\end{enumerate}
@@ -201,32 +209,33 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 \section{Evaluation and Grade Structure}
 \label{evaluation}
 
-\begin{enumerate}% 300*8+250*12
+\begin{enumerate}% 250*7+250*10
 
 	\item Before each class, complete the assigned reading and write a
-	250--300 word \textbf{reading response}. Use the exercise to
+	one page (250 word) \textbf{reading response}. Use the exercise to
 	elaborate, reflect on, test, challenge, or extend an idea from the
 	reading that you find noteworthy. Type your responses, write in
 	complete sentences, and combine those sentences into one or two
-	healthy paragraphs. Due at the start of \textbf{each class} in which
-	no other graded assignment is due. Students who submit fewer than 8
-	responses cannot earn an “A” for the course.
+	healthy paragraphs. Due at the start of \textbf{each class}, unless
+	it is the first class or another graded assignment is due. Students
+	who submit fewer than 7 responses cannot earn an “A” for the course.
 
 	\item On a single sheet of paper, annotate a list of between 7 and
-	15 essential \textbf{articles of faith} that Christians historically
+	12 essential \textbf{articles of faith} that Christians historically
 	derive from Old Testament scripture. For guidance on what counts as
-	“essential” you may consult various catechisms (Catholic, Lutheran,
-	etc), creeds (Apostles', Nicene, etc), and other official documents
-	(such as the Thirty-nine Articles). In your annotations, cite OT
+	“essential” you may consult various catechisms (Catholic, Lutheran),
+	creeds (Apostles', Nicene, New), and other official documents
+	(Articles, Encyclicals, Statements). In your annotations, cite OT
 	texts that seem to speak to each of the doctrines you select,
-	whether for or against or both. Due at the start of \textbf{class four}.
+	whether for or against or both. Due at the start of \textbf{class
+	four}.
 
 	\item A \textbf{final paper} allows you to explore one Christian
 	Doctrine of your choice in terms of its relationship to Old
-	Testament scripture. The paper must have a clear thesis and be 3,000
-	words (12 pages) long (plus or minus 10\%). It should interact with
-	the assigned reading and cite at least 10 secondary sources in
-	total. Due at the start of the \textbf{last class}.
+	Testament scripture. The paper must have a clear thesis and be 2,500
+	words (ten pages) long. It should interact with the assigned reading
+	and cite at least seven secondary sources in total. Due at the start
+	of the \textbf{last class}.
 
 \end{enumerate}
 
