amend HBST 3001 and bump to v 1.1.1

--- a/HB/HBST 3001-Doctrine and the OT.tex
+++ b/HB/HBST 3001-Doctrine and the OT.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[1.1.0]{HB/ST 3001}
+\coursecode[1.1.1]{HB/ST 3001}
 \coursetitle[Hebrew Bible/Systematic Theology]{Christian Doctrine and\\[.8ex] the Old Testament}
 
 % Taught as RLGS 4483 (a remote antecedent) at Tyndale UC in:
@@ -149,7 +149,7 @@ from the founding churches of AST include the following.
 \item UCC: United Church of Canada
 
 	\begin{enumerate}
-	\item The UCC requires its ministers to be in ``\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/what-we-believe}{essential agreement}'' with four doctrinal statements that are ``\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/faith-statements}{subordinate to the primacy of scripture}'':
+	\item The UCC requires its ministers to be in ``\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/what-we-believe}{essential agreement}'' with four doctrinal statements that are ``\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/faith-statements}{subordinate to the primacy of scripture}'' (\href{https://commons.united-church.ca/Documents/What%20We%20Believe%20and%20Why/Theology%20and%20Mission%20of%20the%20Church/Our%20Words%20of%20Faith.pdf#search=study}{GC 41 2012 - 005}):
 		\begin{enumerate}
 			\item\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/twenty-articles-doctrine-1925}{Twenty Articles of Doctrine} (1925)
 			\item\href{http://www.united-church.ca/community-faith/welcome-united-church-canada/statement-faith-1940}{A Statement of Faith} (1940)
@@ -209,7 +209,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 \section{Evaluation and Grade Structure}
 \label{evaluation}
 
-\begin{enumerate}% 250*7+250*10
+\begin{enumerate}% 250*7+250*10 = 4250 words, plus the annotated articles
 
 	\item Before each class, complete the assigned reading and write a
 	one page (250 word) \textbf{reading response}. Use the exercise to
@@ -254,9 +254,9 @@ The breakdown for the course's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Responses  & 40\% \\
+    Reading Responses  & 35\% \\
     Annotated Articles & 20\% \\
-    Final Paper        & 40\% \\
+    Final Paper        & 45\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
