final verson of HBST 3001 (v 1.2.0)

--- a/HB/HBST 3001-Doctrine and the OT.tex
+++ b/HB/HBST 3001-Doctrine and the OT.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[1.1.1]{HB/ST 3001}
+\coursecode[1.2.0]{HB/ST 3001}
 \coursetitle[Hebrew Bible/Systematic Theology]{Christian Doctrine and\\[.8ex] the Old Testament}
 
 % Taught as RLGS 4483 (a remote antecedent) at Tyndale UC in:
@@ -27,7 +27,7 @@
 \semester{Summer Term 2017}
 \meets{Mon–Fri, July 17–28}% \meets{on}{at}{in}
       {9:00--12:00 \AM}
-      {Classroom 2}
+      {Flahiff Room (Library)}
 \website{danieldriver.com/courses/}
 \cdescription{% copy from the current Academic Calendar
 	What is the relationship of scripture and theology? Some answers to
@@ -209,33 +209,32 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 \section{Evaluation and Grade Structure}
 \label{evaluation}
 
-\begin{enumerate}% 250*7+250*10 = 4250 words, plus the annotated articles
+\begin{enumerate}% 200*7+250*8 = 3400 words, plus the annotated articles
 
 	\item Before each class, complete the assigned reading and write a
-	one page (250 word) \textbf{reading response}. Use the exercise to
-	elaborate, reflect on, test, challenge, or extend an idea from the
-	reading that you find noteworthy. Type your responses, write in
+	200--250 word (one page) \textbf{reading response}. Use the exercise
+	to elaborate, reflect on, test, challenge, or extend an idea from
+	the reading that you find noteworthy. Type your responses, write in
 	complete sentences, and combine those sentences into one or two
 	healthy paragraphs. Due at the start of \textbf{each class}, unless
 	it is the first class or another graded assignment is due. Students
-	who submit fewer than 7 responses cannot earn an “A” for the course.
+	who submit fewer than 6 responses cannot earn an “A” for the course.
 
-	\item On a single sheet of paper, annotate a list of between 7 and
-	12 essential \textbf{articles of faith} that Christians historically
-	derive from Old Testament scripture. For guidance on what counts as
-	“essential” you may consult various catechisms (Catholic, Lutheran),
-	creeds (Apostles', Nicene, New), and other official documents
-	(Articles, Encyclicals, Statements). In your annotations, cite OT
-	texts that seem to speak to each of the doctrines you select,
-	whether for or against or both. Due at the start of \textbf{class
-	four}.
+	\item On one sheet of paper, annotate a list of between 7 and 12
+	essential \textbf{articles of faith} that Christians associate with
+	Old Testament scripture. For guidance on what counts as “essential”
+	you may consult various catechisms (Catholic, Lutheran), creeds
+	(Apostles', Nicene, New), and other official documents (Articles,
+	Encyclicals, Statements). In your annotations, cite OT texts that
+	seem to speak to each of the doctrines you select, whether for or
+	against or both. Due at the start of \textbf{class four}.
 
 	\item A \textbf{final paper} allows you to explore one Christian
 	Doctrine of your choice in terms of its relationship to Old
-	Testament scripture. The paper must have a clear thesis and be 2,500
-	words (ten pages) long. It should interact with the assigned reading
-	and cite at least seven secondary sources in total. Due at the start
-	of the \textbf{last class}.
+	Testament scripture. The paper must have a clear thesis and be at
+	least 2,000 words (eight pages) long. It should interact with the
+	assigned reading and cite at least four secondary sources in total.
+	Due at the start of the \textbf{last class}.
 
 \end{enumerate}
 
