final draft syllabi for Fall 2017 semester

--- a/BF/BF 1001-Driver 2017.tex
+++ b/BF/BF 1001-Driver 2017.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2016 by Daniel R. Driver.
+% Copyright (c) 2017 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.1.1]{BF 1001}
+\coursecode[3.2.0]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -33,44 +33,40 @@
 %   - Winter 2016
 % Taught as BF 1001 in:
 %   - Fall 2016
+%   - Fall 2017
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Thursdays, 2:00--4:00 \PM}
+\officehours{Tuesdays, 2:00--4:00 \PM}
 
-\semester{Fall Term 2016}
-\meets{Thursdays}% \meets{on}{at}{in}
+\semester{Fall Term 2017}
+\meets{Tuesdays}% \meets{on}{at}{in}
       {9:00--11:30 \AM}
-      {Three (3)}
+      {TBA}
 \website{astheology.ns.ca}
 \cdescription{% copy from the current Academic Calendar
-	This course explores the First Testament of the Bible as a
-	foundational element of Christian religious heritage. Students will
-	be introduced to a progression of historical and literary data
-	important to understanding the Old Testament in its originating
-	cultural contexts and to considering its resonances in later
-	cultural contexts, including our own.
+	The First Testament of Christian Scripture, also called the Hebrew
+	Bible or Old Testament, is a fundamental part of Christian tradition
+	and durable rule of faith and practice. Students in this course will
+	therefore be introduced to historical and literary data important
+	for understanding the origins of the Hebrew Bible and its subsequent
+	function as Old Testament Scripture in a variety of cultural and
+	religious contexts.
 
-	The broad sweep of biblical tradition and related historical
-	considerations will be presented in large part through guided study
-	of the course textbook. Each week we will also give close attention
-	in class to a particular textual instance, allowing students to
-	develop their exegetical and interpretive skills in a process that
-	moves towards integration of historical, literary and theological
-	elements.
-
-	In addition, we will explore a range of practices—“things you can do
-	with the Bible”—thus encountering the Hebrew Bible in the context
-	of applications that have constituted much of its experienced
-	liveliness within faith communities over millennia. The Bible’s
-	historical and contemporary contributions to personal and communal
-	spiritual formation and practice come into focus here, and students
-	are given an opportunity to consider how the Bible might figure in
-	formative ways within their practice of ministry.
+	The broad sweep of biblical tradition will be presented through a
+	survey of representative books from the Law, the Prophets, and the
+	Writings. To help foster an ecumenical outlook, primary readings
+	from the Bible will be supplemented by case studies of classic
+	Jewish and Christian readings of biblical texts. Students will
+	develop their exegetical skills by studying these examples, and so
+	learn to appreciate the diverse literary, canonical, cultural,
+	historical, hermeneutical, and theological elements involved in
+	biblical interpretation. In addition, the course will consider some
+	ways that the Hebrew Bible/Old Testament can feature in the practice
+	of ministry and in the spiritual practice of faith communities.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-
 	By the end of the course students should be able to:
 		name major Old Testament people and events;
 		give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
@@ -124,12 +120,6 @@ have been placed on a 2-hour reserve.
     Oxford / New York: Oxford University Press, 2010.
     ISBN 978-0195289602.
 
-%	\bibitem[NJPS]{njps}
-%	Adele Berlin and Marc Zvi Brettler, eds.
-%	\emph{The Jewish Study Bible: Second Edition}.
-%	Oxford / New York: Oxford University Press, 2014.
-%	ISBN 978-0199978465.
-
 	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
 	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
 	Nashville: Abingdon Press, 2015.
@@ -146,20 +136,13 @@ have been placed on a 2-hour reserve.
 	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
 	ISBN 978-0881411744.
 
-%	\bibitem[OTIC]{otic} Daniel R. Driver. \emph{\ctitle\ Introductory
-%	Coursepack}. Halifax, \csemester. In response to the requests of
-%	many students I have compiled a pack of notes for my lectures. I
-%	will circulate the relevant pages before each class. It behooves you
-%	to gather, annotate, and study this material carefully.
-
 \end{thebibliography}
 \endgroup
 
 An acceptable alternative study Bible is the NJPS: Adele Berlin and Marc
 Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
 (Oxford / New York: Oxford University Press, 2014). A reference copy is
-available in the library, and it is well worth consulting. However, the
-instructor will cite the NRSV when writing quizzes and exams.
+available in the library, and it is well worth consulting.
 
 \section{Supplementary Texts}
 \label{supplementary}
@@ -177,45 +160,45 @@ receive an ``A'' for the course.
 \label{outline}
 
 We will adhere to the schedule in \autoref{schedule} as closely as
-possible, though the instructor reserves the right to adjust it to suit
+possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
 
-\newcommand\HBFB[1]{\cite[pp.~#1]{hbfb}}
+\newcommand\HBFB[1]{\cite[#1]{hbfb}}
 
 \setcolumncount{5}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
 \begin{table}[htbp]% set to `p' to put the schedule on its own page
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary (total chapters)}&\textbf{Secondary}&\textbf{Supplementary}&\textbf{Date}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary (chapters)}&\textbf{Secondary (pgs)}&\textbf{Supplement (author)}&\textbf{Due}\\
 	\midrule
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & C. Seitz             &  8 Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & G. Anderson          & 15 Sep. \\
-		& Exodus 1--18         & \HBFB{65--75}   & C. Mathews McGinnis  & 22 Sep. \\
-		& Exodus 19--40        & \cite[all]{heschel} & B. Childs        & 29 Sep. \\
-		& Deuteronomy (34)     & \HBFB{77--99}   & J. Levenson          &  6 Oct. \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & 12 Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & 19 Sep. \\
+		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & 26 Sep. \\
+		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     &  3 Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & 10 Oct. \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-	\reminder{First paper is \textbf{due} at the start of class six}{}            \\
-		& Joshua, Judges (45)  & \HBFB{103--121} & P. Trible            & 13 Oct. \\
-		& 1 \& 2 Samuel (55)   & \HBFB{123--143} & R. Alter             & 20 Oct. \\
-		& 1 \& 2 Kings (47)    & \cite[all]{irenaeus} & N. MacDonald    & 27 Oct. \\ [1ex]
+	\reminder{First paper is \textbf{due} on the sixth day of class}{}             \\
+		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & 17 Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--143} & Robert Alter          & 24 Oct. \\
+	\noclass{Term Break (Monday to Friday)}                              & 31 Oct. \\
+		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Nathan MacDonald &  7 Nov. \\ [1ex]
 
-		& Isaiah 1--12, 36--66 & \HBFB{145--168} & B. Sommer            &  3 Nov. \\
-	\noclass{Term Break (Tuesday to Thursday)}                          & 10 Nov. \\
-		& Hosea--Nahum (41)  & \HBFB{169--184}   & J. Nogalski          & 17 Nov. \\ [1ex]
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & 14 Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & 21 Nov. \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-	\reminder{Second paper is \textbf{due} at the start of class eleven}{}        \\
-		& Psalms 1--19, 72--74, 89--106 & \HBFB{187--202} & G. Sheppard & 24 Nov. \\
-		& Ecclesiastes (12)    & \HBFB{203--246} & M. Fox, K. Dell      &  1 Dec. \\ [1ex]
+	\reminder{Second paper is \textbf{due} on the eleventh day of class}{}         \\
+		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & 28 Nov. \\
+		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        &  5 Dec. \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for all courses}{12 Dec.} \\
+	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
 
 	\bottomrule
   \end{tabular}
@@ -233,20 +216,20 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 \begin{enumerate}
 
-	\item I will announce \textbf{reading quizzes} throughout the
-	semester, as often as once a week. They are designed to ensure that
-	you have read the assigned material carefully. Quizzes are given in
-	class, and they may not be made up in the case of absence.
+	\item I will set \textbf{reading prompts} throughout the semester.
+	They are designed to ensure that you have read the assigned material
+	carefully, and to help you explore its significance. Online prompt
+	responses should be between 250 and 300 words long.
 
 	\item Students are to \textbf{memorize ten verses from the Psalms}
-	in the King James Version and recite it to me privately, in my
-	office, by the last day of class. You may select ten verses from one
-	psalm, one verse from ten psalms, or any combination in between.
+	in the King James Version and recite them to me privately by the
+	last day of class. You may select ten verses from one psalm, one
+	verse from ten psalms, or any combination in between.
 
 	\item Two \textbf{short papers} will facilitate student reflection
-	on the two extended works of biblical interpretation, by
-	\cite{heschel} and \cite{irenaeus}. Each should be 4--5,000 words
-	long. They are due at the start of classes six and eleven,
+	on two extended works of biblical interpretation, one by
+	\cite{heschel} and one by \cite{irenaeus}. Each should be 3,000
+	words long. They are due on the sixth and eleventh days of class,
 	respectively.
 
 	\begin{enumerate}
@@ -265,12 +248,12 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\end{enumerate}
 
-	\item Each student will \textbf{lead a seminar} on one of the
-	supplementary articles. The discussion, which should last between 35
-	and 45 minutes, should begin with a brief (5 min) summary of the
-	article. The balance of the time should be spent helping the class
-	elaborate, reflect on, test, challenge, or extend the main ideas
-	presented there.
+	\item Each student will \textbf{lead a seminar} on one of the twelve
+	supplementary articles. The discussion, which should last 30
+	minutes, should begin with a brief (5~min) summary of the article.
+	The balance of the time should be spent helping the class elaborate,
+	reflect on, test, challenge, or extend the main ideas presented
+	there.
 
 \end{enumerate}
 
@@ -282,7 +265,7 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Quizzes & 25\% \\
+    Reading Prompts & 25\% \\
     Memorization    & 10\% \\
     First Paper     & 25\% \\
     Second Paper    & 25\% \\
