--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,26 +1,34 @@
-\ProvidesFile{other.tex}[2016/01/05 v2.1 -- Course policy]
+\ProvidesFile{other.tex}[2017/07/29 v2.2 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
 
 Late work will not be accepted, except in genuinely extenuating
-circumstances.
+circumstances. Unless I state otherwise, written assignments are to be
+uploaded by 11:59 \PM\ on the date indicated.
 
-Essay submissions must be typewritten, double-spaced, and free from
-error. In this course they should follow the \emph{SBL Handbook of Style},
-2nd Edition (refer to the free, online \href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement}).
+Essay submissions must be typewritten, double-spaced, and formatted as
+PDFs. They should be free from error. In this course they should follow
+the \emph{SBL Handbook of Style}, 2nd Edition (refer to the free, online
+\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{
+Student Supplement}). APA may be used by permission.
+
 \href{http://www.eerdmans.com/Pages/Item/59043/Commentary-Statement.aspx}{Plagiarism},
 if \href{https://www.theguardian.com/world/2013/feb/09/german-education-minister-quits-phd-plagiarism}{detected},
 will result in failure of the course.
 
-Students should request permission to record a class. If permission is
-granted, I stipulate that the recording be for personal use only. It may
-not be shared or distributed.
+Students should request permission to record a class or lecture. If
+permission is granted, or if recordings are provided (as in the case of
+an online course), I stipulate that all recordings be for personal use
+only. They may not be shared or distributed.
 
-Finally, as \href{http://dx.doi.org/10.1016/j.compedu.2012.10.003}{cognitive
+Finally, I encourage the conscientious use of laptops, tablets, and
+other technology in my classes. In classroom settings, realize that, as
+\href{http://dx.doi.org/10.1016/j.compedu.2012.10.003}{cognitive
 psychologists have demonstrated}, ``laptop multitasking hinders
-classroom learning for both users and nearby peers.'' I therefore
-encourage the conscientious use of laptops, tablets, and other
-technology in the classroom. Please do your part to foster an
-environment of open dialogue by honouring the presence of your
-classmates.
+classroom learning for both users and nearby peers.'' Do your part to
+foster an environment of open dialogue by honouring the presence of your
+classmates. In online settings, consider both the physical environment
+in which you choose to work and the virtual environment that you help
+create through your participation in various forums. Let your engagement
+in this course be marked by rigour and charity alike.
